UTC offset for Samoa is miscalculated when !HAVE(TIMEGM) https://bugs.webkit.org/show_bug.cgi?id=204032

Reviewed by Yusuke Suzuki.

JSTests:

* complex.yaml:
* complex/timezone-offset-apia.js: Added.
Add test to verify Date.prototype.getTimezoneOffset for TZ=Pacific/Apia.

Source/WTF:

We have code assuming that the world's time zones haven't changed in the past decade,
but Samoa changed from UTC-11 to UTC+13 at the beginning of 2012.

(Note: "Samoa" here means the Independent State of Samoa (Pacific/Apia) and not American Samoa (Pacific/Samoa).
       See https://en.wikipedia.org/wiki/Time_in_Samoa for more information.)

* wtf/DateMath.cpp:
(WTF::calculateUTCOffset):
Update "canned date" from 2009 to 2019.

Tools:

* Scripts/run-jsc-stress-tests:
Allow environment variables to be passed to "complex" tests.


Canonical link: https://commits.webkit.org/217400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252345 268f45cc-cd09-0410-ab3c-d52691b4dbfc